# app/Http/Controllers/ProductController.php
@@ -23,8 +23,47 @@ class ProductController extends Controller
         //
     }
 
+    
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     * path="/api/v1/products",
+     * operationId="Add New Product",
+     * tags={"Products"},
+     * summary="Add New Product",
+     * description="Add New Product",
+     * security={{ "apiAuth": {} }},
+     *     @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"name", "model", "description", "starting_price" },
+     *               @OA\Property(property="name", type="text", example="Toyota Corolla"),
+     *               @OA\Property(property="model", type="integer", example="2019"),
+     *               @OA\Property(property="description", type="text", example="Nice Care"),
+     *               @OA\Property(property="starting_price", type="integer", example="17500"),
+     *            ),
+     *        ),
+     *    ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Product Created Successfully",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Product Created Successfully",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Entity",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     * )
      */
     public function store(ProductRequest $request)
     {
